# interactive_parser

./: .gitignore  app.py  parser.py  pyproject.toml
static/: main.js  style.css
templates/: index.html  movies_result.html  og_card.html
