[tool.poetry]
name = "interactive_parser"
version = "0.1.0"
description = ""
authors = ["vlzh <vlzh@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.23.0"
bs4 = "^0.0.1"
Markdown = "^3.2.1"
opengraph_py3 = "^0.71"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
